[package]
name = "benford"
version = "0.1.1"
edition = "2021"
authors = ["Jan Starke <jan.starke@posteo.de>"]
license = "GPL-3.0"
description = "library to test the Benford-ness of a given set of numbers"
repository = "https://github.com/janstarke/benford"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1"
